--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,7 +4,7 @@
     <%= image_tag("img_avatar.png", width:"150px") %>
   </div>
   <div class="column2" style="background-color:#bbb;">
-    <h2><%= user.name %></h2>
+    <h2> <a href="users/<%= user.id %>"> <%= user.name %> </a> </h2>
     <p class="right">Number of Posts x</p>
   </div>
 </div>
