--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,15 +3,24 @@
     <%= image_tag("img_avatar.png", width:"150px") %>
   </div>
   <div class="column2" style="background-color:#bbb;">
-    <h2><%= user.name %></h2>
+    <h2><%= @user.name %></h2>
     <p class="right">Number of Posts x</p>
   </div>
 </div>
 
 <div class="bio">
-    <h2><%= user.bio %></h2>
+    <h3>Bio</h3>
+    <p><%= @user.bio %></p>
 </div>
 
 <div class="post">
     <p> some posts </p>
+      <% i=0 %>  
+     <% @posts.each do |post| %>
+      <% i=i+1 %> 
+   <p> Post #  <%= i.to_s %> </p>
+    <p><%= post.Text %> </p>
+    <%end %>
 </div>
+
+<button> See all posts </button>
