--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,8 +5,7 @@
   </div>
   <div class="column2" style="background-color:#bbb;">
     <h2> <a href="users/<%= user.id %>"> <%= user.name %> </a> </h2>
-    <p class="right">Number of Posts x</p>
+    <p class="right">Number of Posts = <%=user.postscounter%></p>
   </div>
 </div>
 <% end %>
-
