add not to be empty method in user spec

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,10 +4,9 @@
       Return
     </button>
   </a>
-
   <div class="user-card"> <%# this can be a partial %>
       <a href="/users/<%=@user[:id]%>" class="user-link">
-        <img src="<%=@user.photo || image_url('no_profile_pic.png') %>" alt="<%=@user.name %>" class="user-image" />
+        <%= image_tag("img_avatar.png", width:"150px") %>
         <h2 class="user-name"><%= @user[:name] %></h2> 
       </a>
       <p class="posts-counter">Posts: <%= @user[:posts_counter] %> </p>
@@ -40,7 +39,7 @@
             <div class="comment-container">
               <div class="commenter">
                 <a href="/users/<%=commenter[:id]%>">
-                  <img src="<%=commenter[:photo] || image_url('no_profile_pic.png') %>" alt="<%=@user.name %>" class="user-image commenter-image" />
+                  <img src="<%=commenter[:photo] || image_url('img_avatar.png') %>" alt="<%=@user.name %>" class="user-image commenter-image" />
                 </a>
                 <h4><%=commenter[:name]%></h4>
               </div>
