--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,4 +26,4 @@
     <%end %>
 
 
-<button class="center"> See all posts </button>
+<a href="<%=@user.id%>/posts" class="center"> See all posts </a>
